implemented cross validation

--- a/sa_challenge1.ipynb
+++ b/sa_challenge1.ipynb
@@ -1585,10 +1585,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Implement cross vaidation"
+   ]
   }
  ],
  "metadata": {
