--- a/sa_challenge1.ipynb
+++ b/sa_challenge1.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m \n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m \n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import numpy as np \n",
@@ -32,7 +44,7 @@
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
-    "import tensorflow as tf\n",
+    "# import tensorflow as tf\n",
     "import xgboost\n",
     "from lightgbm import LGBMClassifier\n",
     "pd.options.display.max_columns = None\n",
@@ -49,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 730,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1488,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
