mean_absolute_error

--- a/sa_challenge1.ipynb
+++ b/sa_challenge1.ipynb
@@ -1181,7 +1181,7 @@
    "source": [
     "def evaluation(ytest, ypred):\n",
     "    return {\n",
-    "        \"accuracy\": metrics.mean_absolute_error(ytest, ypred),\n",
+    "        \"mean_absolute_error\": metrics.mean_absolute_error(ytest, ypred),\n",
     "        #\"precision\": metrics.precision_score(ytest, ypred),\n",
     "        #'auc':metrics.roc_auc_score(ytest,ypred),\n",
     "        #\"f1_score\": metrics.f1_score(ytest, ypred),\n",
